Initial EDA and continuous update of data

--- a/notebooks/Data_generation.ipynb
+++ b/notebooks/Data_generation.ipynb
@@ -399,11 +399,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scirpting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import os\n",
+    "import glob\n",
+    "def read_file(file_name:str) -> dict:\n",
+    "    with open(file_name, 'r') as handle:\n",
+    "      content = json.load(handle)\n",
+    "    return content\n",
+    "files_dir = r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\extracted_filings'\n",
+    "files = glob.glob(files_dir+r'\\*')\n",
+    "\n",
+    "# Ignore previously processed filings\n",
+    "# ai_mentions = glob.glob(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions\\*\")\n",
+    "# processed_mentions = pd.DataFrame(files, columns=['file_name'])\n",
+    "# ai_mentions = glob.glob(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions\\*\")\n",
+    "\n",
+    "# def mention_exists(file_name:str) -> bool:\n",
+    "#     \"\"\"\n",
+    "#     Check if a file has been processed\n",
+    "#     :param file_name: str\n",
+    "#     :return: bool\n",
+    "#     \"\"\"\n",
+    "#     mention_name = \"C:\\\\Users\\\\P70088982\\\\Documents\\\\edgar-crawler\\\\datasets\\\\ai_mentions\\\\\"+file_name.split('\\\\')[-1].replace('.json', '_matches.json')\n",
+    "#     if mention_name in ai_mentions:\n",
+    "#         return mention_name\n",
+    "#     else:\n",
+    "#         return None\n",
+    "# processed_mentions['mentions'] = processed_mentions['file_name'].apply(lambda x: mention_exists(x))\n",
+    "# # Set processing time to yesterday\n",
+    "# processed_mentions['processing_date'] = pd.to_datetime('now', utc=True).date() - pd.DateOffset(days=1)\n",
+    "# processed_mentions.to_csv(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\processed_mentions.csv\")\n",
+    "import re\n",
+    "original_search_terms = [\"AI\", \"Artificial Intelligence\",\"A.I\", \"Machine Learning\",\"ML\",\"Deep Learning\",\"DL\",\"Neural Network\",\"NLP\",\n",
+    "    \"Natural Language Processing\", \"Computer Vision\", \"Robotics\",\n",
+    "    \"Computing\",\"algorithm\", \"Chatbot\",\"Recommendation System\", \"Recommender System\", \"Image Recognition\", \"Speech Recognition\", \"Voice Assistant\",\n",
+    "    \"Artificial General Intelligence\",\"AGI\", \"artificial\", \"comput\\w*\", \"generative\", \"agent\", \"deepfake\", \"\\w*learning\\w*\", \"autonom\\w*\"]\n",
+    "\n",
+    "def extract_keywords(file:dict, sections:list=[\"1\", \"1A\", \"3\", \"7\"], search_terms:list=[]):\n",
+    "  search_terms = [\"Artificial Intelligence\",\"A\\.I\", \"Machine Learning\",\"Deep Learning\",\"NLP\",\n",
+    "    \"Natural Language Processing\", \"Computer Vision\", \"Chatbot\",\"Recommendation System\", \"Recommender System\", \"Image Recognition\", \"Speech Recognition\", \"Voice Assistant\",\n",
+    "    \"Artificial General Intelligence\",\"AGI\", \"generative\", \"deepfake\"]\n",
+    "  search_pattern = re.compile(r'\\b(' + '|'.join(search_terms) + r')\\b', re.IGNORECASE)\n",
+    "  document_results = {}\n",
+    "  document_results['company'] = file['company']\n",
+    "  document_results['cik'] = file['cik']\n",
+    "  document_results['filing_date'] = file['filing_date']\n",
+    "  document_results['period_of_report'] = file['period_of_report']\n",
+    "  document_results['filename'] = file['filename']\n",
+    "\n",
+    "  filled=False\n",
+    "\n",
+    "  for section in sections:\n",
+    "      if f'item_{section}' in file:\n",
+    "            content = file[f'item_{section}']\n",
+    "            matches = list(search_pattern.finditer(content))\n",
+    "            for match in matches:\n",
+    "                keyword = match.group(0)\n",
+    "\n",
+    "                # Extract the surrounding sentence\n",
+    "                start_index = content.rfind('.', 0, match.start()) + 1\n",
+    "                end_index = content.find('.', match.end())\n",
+    "                if end_index == -1:  # If no period found, go to the end of the string\n",
+    "                    end_index = len(content)\n",
+    "                sentence = content[start_index:end_index].strip()\n",
+    "\n",
+    "                # Extract the paragraph containing the keyword (starting and ending with a newline)\n",
+    "                paragraph_start = content.rfind(\"\\n\", 0, match.start()) + 1  # Start of paragraph\n",
+    "                paragraph_end = content.find(\"\\n\", match.end())  # End of paragraph\n",
+    "                if paragraph_end == -1:  # If no newline is found after the match, go to the end of the string\n",
+    "                    paragraph_end = len(content)\n",
+    "                paragraph = content[paragraph_start:paragraph_end].strip()\n",
+    "\n",
+    "                # Append match details\n",
+    "                if f'{section}_matches' not in document_results:\n",
+    "                    document_results[f'{section}_matches'] = []\n",
+    "                    filled=True\n",
+    "                document_results[f'{section}_matches'].append({\n",
+    "                    \"keyword\": keyword,\n",
+    "                    \"sentence\": sentence,\n",
+    "                    \"paragraph\": paragraph, \n",
+    "                    \"match_id\": f'{file[\"cik\"]}_{section}_{keyword}_{start_index}_{end_index}'})\n",
+    "  if not filled:\n",
+    "    document_results = None\n",
+    "  return document_results            \n",
+    "## Matches extraction and saving to files \n",
+    "# Took ~35m for 5 years of data, may take less if files not saved considering everything fit in memory.\n",
+    "files_dir = r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\extracted_filings'\n",
+    "files = glob.glob(files_dir+r'\\*')\n",
+    "processed_mentions = pd.read_csv(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\processed_mentions.csv\").drop(columns=['Unnamed: 0']).set_index('file_name')\n",
+    "existing = processed_mentions.index.tolist()\n",
+    "to_process = [file for file in files if file not in existing]\n",
+    "json_files = {}\n",
+    "# processed_mentions = pd.read_csv(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\processed_mentions.csv\").set_index('file_name')\n",
+    "# to_process = [file for file in files if file not in processed_mentions['file_name'].values]\n",
+    "for i, file in enumerate(to_process):\n",
+    "    example_file = read_file(file)\n",
+    "    keywords = extract_keywords(example_file)\n",
+    "    processed_mentions.loc[file] = pd.Series([None, pd.to_datetime('now', utc=True).date()], index=processed_mentions.columns)\n",
+    "    if keywords:\n",
+    "        json_files[file] = keywords\n",
+    "        # Save the results to a JSON file\n",
+    "        mentions_file = file.replace('.json', '_matches.json').replace('extracted_filings', 'ai_mentions')\n",
+    "\n",
+    "\n",
+    "        with open(mentions_file, 'w') as f:\n",
+    "            json.dump(keywords, f, indent=4)\n",
+    "        processed_mentions.loc[file, 'mentions'] = mentions_file\n",
+    "\n",
+    "    if i % 100 == 0:\n",
+    "        print(f\"{i} files processed, {len(json_files)} files with keywords found, {len(to_process)-i} files remaining\")\n",
+    "        # Take out of loop if you don't want to save every 100 files\n",
+    "        processed_mentions.to_csv(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\processed_mentions.csv\")\n",
+    "\n",
+    "## Dataframe generation\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import glob \n",
+    "\n",
+    "json_files = {}\n",
+    "files_paths = glob.glob(r\"C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions\\*\")\n",
+    "for i, file in enumerate(files_paths):\n",
+    "    with open(file, 'r') as handle:\n",
+    "        content = json.load(handle)\n",
+    "    json_files[file] = content\n",
+    "    if i % 100 == 0:\n",
+    "        print(f\"{i} files loaded, {len(files_paths)-i} files remaining\")\n",
+    "df_rows = []\n",
+    "for file in json_files:\n",
+    "    match_fields = [match for match in json_files[file].keys() if match.endswith('_matches')]\n",
+    "    non_match_fields = [match for match in json_files[file].keys() if not match.endswith('_matches')]\n",
+    "    for match_field in match_fields:\n",
+    "        for match in json_files[file][match_field]:\n",
+    "            row = {}\n",
+    "            row.update({field: json_files[file][field] for field in non_match_fields})\n",
+    "            row['keyword'] = match['keyword']\n",
+    "            row['sentence'] = match['sentence']\n",
+    "            row['match_id'] = match['match_id']\n",
+    "            row['match_field'] = match_field\n",
+    "            df_rows.append(row)\n",
+    "\n",
+    "matches_df = pd.DataFrame(df_rows)\n",
+    "matches_df['filing_year'] = pd.to_datetime(matches_df['filing_date']).dt.year \n",
+    "matches_df['reporting_year'] = pd.to_datetime(matches_df['period_of_report']).dt.year\n",
+    "matches_df.to_csv(r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions.csv', index=False)\n",
+    "matches_df.to_excel(r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions.xlsx', index=False)"
+   ]
   }
  ],
  "metadata": {
