--- a/notebooks/Data_generation.ipynb
+++ b/notebooks/Data_generation.ipynb
@@ -982,6 +982,43 @@
     "matches_df.to_csv(r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions.csv', index=False)\n",
     "matches_df.to_excel(r'C:\\Users\\P70088982\\Documents\\edgar-crawler\\datasets\\ai_mentions.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random \n",
+    "random_companies = matches_df[matches_df.reporting_year==2025].drop_duplicates('cik').cik.sample(n=20, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "business_mention_companies = matches_df[matches_df.match_field=='1_matches'].cik.unique()\n",
+    "first_risk = matches_df[~matches_df.cik.isin(business_mention_companies)].groupby('cik')[['reporting_year']].min()\n",
+    "random_risk_no_business = first_risk[first_risk.reporting_year==2025].sample(n=20, random_state=42).index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
